# clipassman

./: MANIFEST.in  MIGRATION.md  NOTICE.md  README.md  app.py  manager.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
clipassman/: __init__.py  app.py  app_manager.py  clipassman.py  commander.py  config.py  manager.py  managers.py  menu_old.py  output_manager.py  passman.py  smart_pass_gen.py  smart_pass_manager.py  smart_password_factory.py  smart_printer.py
requirements/: requirements-dev.txt
smartpasslib/: __init__.py
