[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipassman"
version = "0.7.4"
description = "Cross-platform console Smart Password manager and generator."
authors = [
    {name = "A.A Suvorov", email = "smartlegiondev@gmail.com"}
]
license = "BSD-3-Clause OR LicenseRef-Commercial"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Intended Audience :: End Users/Desktop",
    "Environment :: Console",
]
dependencies = [
    "smart-tsp-benchmark~=0.1.6",
    "numba==0.61.2"
]

[project.urls]
Homepage = "https://github.com/smartlegionlab/clipassgen"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
clipassman = "clipassman.clipassman:main"