[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipassman"
version = "2.1.3"
description = "Terminal-based smart password manager with deterministic password generation. Generate, manage, and retrieve passwords without storing them - all from your command line."
authors = [
    {name = "Alexander Suvorov", email = "smartlegiondev@gmail.com"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Intended Audience :: End Users/Desktop",
    "Environment :: Console",
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/smartlegionlab/clipassman"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
clipassman = "clipassman.clipassman:main"