[metadata]
name = clipassman
version = attr: clipassman.__version__
url = https://github.com/smartlegionlab/clipassman/
author = A.A. Suvorov
author_email = smartlegiondev@gmail.com
description = Cross-platform console smart password generator and manager.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
project_urls =
    Documentation = https://github.com/smartlegionlab/clipassman/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/clipassman/releases
keywords =
    clipassgen
    clipassman
    password generator
    passgen
    smartpasslib
    smart password generator
    cli password generator
    smartpassman
    clipassman
    smartlegionlab


[options]
package_dir =
packages = find:
python_requires = >= 3.6
include_package_data = true
zip_safe = false
install_requires =
    click~=8.0.1
    smartcliapp~=0.4.0
    smartpasslib~=0.4.2

[options.entry_points]
console_scripts =
    clipassman = clipassman.app:cli

[coverage:run]
omit =
    venv/*
    .pytest_cache
    *__init__.py